[project]
name = "midnightlib"
version = "0.1.0"
description = "Sistema de gerenciamento da Midnightlib"
authors = [
    {name = "rochamrcs",email = "mavinicius95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
